<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:theme="@style/MyPopupMenuTheme"
            android:background="@drawable/popup_menu_bg"
            android:clipToPadding="false"
            android:elevation="?android:attr/popupElevation">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <!-- header -->
            <TableRow android:id="@+id/filter_header">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:layout_gravity="right"
                        android:text="@string/menu_browser_filter"/>
            </TableRow>
            <TableRow android:id="@+id/filter_header_divider">
                <View android:layout_height="1dp"
                      android:background="@color/white_trans25"/>
            </TableRow>
            <!-- All -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingRight="40dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/filter_all"
                        android:text="@string/menu_browser_filter_all"/>
            </TableRow>
            <!-- Unread -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/filter_unread"
                        android:text="@string/menu_browser_filter_unread"/>
            </TableRow>
            <!-- Currently Reading -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/filter_reading"
                        android:text="@string/menu_browser_filter_reading"/>
            </TableRow>
            <!-- Unfinished -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/filter_unfinished"
                        android:text="@string/menu_browser_filter_unfinished"/>
            </TableRow>
            <!-- Read -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/filter_read"
                        android:text="@string/menu_browser_filter_read"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
