<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:theme="@style/MyPopupMenuTheme"
            android:background="@drawable/popup_menu_bg"
            android:clipToPadding="false"
            android:elevation="?android:attr/popupElevation">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <!-- header -->
            <TableRow android:id="@+id/sort_header">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:layout_gravity="right"
                        android:layout_span="3"
                        android:text="@string/menu_sort_by"/>
            </TableRow>
            <TableRow android:id="@+id/sort_header_divider">
                <View android:layout_height="1dp"
                      android:layout_span="3"
                      android:background="@color/white_trans25"/>
            </TableRow>
            <!-- Name -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_name_label"
                        android:text="@string/menu_browser_sort_name"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_name_asc"
                        android:src="@drawable/ic_sort_name_asc_24"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_name_desc"
                        android:src="@drawable/ic_sort_name_desc_24"/>
            </TableRow>
            <!-- Last access -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_access_label"
                        android:text="@string/menu_browser_sort_access"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_access_asc"
                        android:src="@drawable/ic_sort_time_asc_24"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_access_desc"
                        android:src="@drawable/ic_sort_time_desc_24"/>
            </TableRow>

            <!-- creation -->
            <TableRow android:id="@+id/sort_creation">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_creation_label"
                        android:text="@string/menu_sort_creation"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_creation_asc"
                        android:src="@drawable/ic_sort_time_asc_24"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_creation_desc"
                        android:src="@drawable/ic_sort_time_desc_24"/>
            </TableRow>

            <!-- Modified -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_modified_label"
                        android:text="@string/menu_sort_modified"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_modified_asc"
                        android:src="@drawable/ic_sort_time_asc_24"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_modified_desc"
                        android:src="@drawable/ic_sort_time_desc_24"/>
            </TableRow>
            <TableRow android:paddingTop="6dp">
                <View android:layout_height="1dp"
                      android:layout_span="3"
                      android:background="@color/white_trans25"/>
            </TableRow>
            <TableRow android:paddingTop="6dp"/>

            <!-- Pages Total -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_pages_label"
                        android:text="@string/menu_browser_sort_pages_total"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_pages_asc"
                        android:src="@drawable/ic_sort_0_9"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_pages_desc"
                        android:src="@drawable/ic_sort_9_0"/>
            </TableRow>
            <!-- Pages Left -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:id="@+id/sort_pages_left_label"
                        android:text="@string/menu_browser_sort_pages_left"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_pages_left_asc"
                        android:src="@drawable/ic_sort_0_9"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/sort_pages_left_desc"
                        android:src="@drawable/ic_sort_9_0"/>
            </TableRow>
            <TableRow android:paddingTop="6dp">
                <View android:layout_height="1dp"
                      android:layout_span="3"
                      android:background="@color/white_trans50"/>
            </TableRow>
            <TableRow android:paddingTop="6dp"/>
            <!-- Strip Noise Toggle -->
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:paddingRight="10dp"
                        android:text="@string/menu_strip_title_noise"/>
                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/strip_title_noise_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:padding="8dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
